# BotCreators

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
config/: logging.yml
docs/: data-model.md  formats.md  limits.md  logging.md  overview.md
docs/architecture/: components-layers.md  componets-layers.puml  context-map.md  context-system.md  index.md
docs/domain/: glossary.md
docs/features/: feature-context-map.md  index.md  key-sequences.md
docs/quality/: testing-strategy.md
docs/requirements/: add_req01.md  req_trace_matrix.md  requirements.md
docs/usage/: cli.md  telegram.md
src/audience_bot/: __init__.py  cli.py
src/audience_bot/application/: __init__.py  container.py
src/audience_bot/application/config/: __init__.py  _impl.py  env_loader.py  settings.py
src/audience_bot/application/services/: __init__.py  conversation.py  sessions.py
src/audience_bot/application/usecases/: __init__.py  dto.py  exceptions.py  files.py  pipeline.py  ports.py
src/audience_bot/domain/: __init__.py
src/audience_bot/domain/extraction/: __init__.py  core.py
src/audience_bot/infrastructure/: __init__.py  excel_renderer.py  extraction_adapter.py  parsers.py  reporting_adapter.py  telegram.py  temp_storage.py
tests/: conftest.py  test_contract_ports.py  test_conversation.py  test_domain_extraction.py  test_excel_renderer_adapter.py  test_parser_adapter.py  test_pipeline.py  test_pipeline_limits.py  test_reporting_adapter.py  test_reporting_builder.py  test_usecases.py
tests/data/: sample.html  sample.json
(+4 files in other folders)
