[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "telegram-history-bot"
version = "0.1.0"
description = "Прототип Telegram-бота AudienceBot: парсит экспорт чата и строит отчёты об аудитории чата."
readme = "README.md"
authors = []
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
  "dependency-injector>=4.40",
  "pydantic-settings>=2.3",
  "openpyxl>=3.1.5",
  "pyyaml>=6.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[project.scripts]
run-audience-bot = "audience_bot.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
markers = [
  "slow: mark test as slow",
]
